ac2020/days/antlr/grammars/Day19Part2Example.g4
grammar Day19Part2Example;

r42: r9 r14 | r10 r1;
r9: r14 r27 | r1 r26;
r10: r23 r14 | r28 r1;
r1: 'a';
r11: r42 r31 | r42 r11 r31;
r5: r1 r14 | r15 r1;
r19: r14 r1 | r14 r14;
r12: r24 r14 | r19 r1;
r16: r15 r1 | r14 r14;
r31: r14 r17 | r1 r13;
r6: r14 r14 | r1 r14;
r2: r1 r24 | r14 r4;
r0: r8 r11 EOF;
r13: r14 r3 | r1 r12;
r15: r1 | r14;
r17: r14 r2 | r1 r7;
r23: r25 r1 | r22 r14;
r28: r16 r1;
r4: r1 r1;
r20: r14 r14 | r1 r15;
r3: r5 r14 | r16 r1;
r27: r1 r6 | r14 r18;
r14: 'b';
r21: r14 r1 | r1 r14;
r25: r1 r1 | r1 r14;
r22: r14 r14;
r8: r42 | r42 r8;
r26: r14 r22 | r1 r20;
r18: r15 r15;
r7: r14 r5 | r1 r21;
r24: r14 r1;
