ac2020/days/antlr/Day19Part2ExampleParser.py
# Generated from Day19Part2Example.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Day19Part2ExampleParser ( Parser ):

    grammarFileName = "Day19Part2Example.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'a'", "'b'" ]

    symbolicNames = [  ]

    RULE_r42 = 0
    RULE_r9 = 1
    RULE_r10 = 2
    RULE_r1 = 3
    RULE_r11 = 4
    RULE_r5 = 5
    RULE_r19 = 6
    RULE_r12 = 7
    RULE_r16 = 8
    RULE_r31 = 9
    RULE_r6 = 10
    RULE_r2 = 11
    RULE_r0 = 12
    RULE_r13 = 13
    RULE_r15 = 14
    RULE_r17 = 15
    RULE_r23 = 16
    RULE_r28 = 17
    RULE_r4 = 18
    RULE_r20 = 19
    RULE_r3 = 20
    RULE_r27 = 21
    RULE_r14 = 22
    RULE_r21 = 23
    RULE_r25 = 24
    RULE_r22 = 25
    RULE_r8 = 26
    RULE_r26 = 27
    RULE_r18 = 28
    RULE_r7 = 29
    RULE_r24 = 30

    ruleNames =  [ "r42", "r9", "r10", "r1", "r11", "r5", "r19", "r12", 
                   "r16", "r31", "r6", "r2", "r0", "r13", "r15", "r17", 
                   "r23", "r28", "r4", "r20", "r3", "r27", "r14", "r21", 
                   "r25", "r22", "r8", "r26", "r18", "r7", "r24" ]

    EOF = Token.EOF
    T__0=1
    T__1=2

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class R42Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r9(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R9Context,0)


        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r10(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R10Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r42

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR42" ):
                listener.enterR42(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR42" ):
                listener.exitR42(self)




    def r42(self):

        localctx = Day19Part2ExampleParser.R42Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r42)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.r9()
                self.state = 63
                self.r14()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.r10()
                self.state = 66
                self.r1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R9Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r27(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R27Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r26(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R26Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r9

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR9" ):
                listener.enterR9(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR9" ):
                listener.exitR9(self)




    def r9(self):

        localctx = Day19Part2ExampleParser.R9Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_r9)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.r14()
                self.state = 71
                self.r27()
                pass
            elif token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.r1()
                self.state = 74
                self.r26()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R10Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r23(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R23Context,0)


        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r28(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R28Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r10

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR10" ):
                listener.enterR10(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR10" ):
                listener.exitR10(self)




    def r10(self):

        localctx = Day19Part2ExampleParser.R10Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_r10)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.r23()
                self.state = 79
                self.r14()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.r28()
                self.state = 82
                self.r1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR1" ):
                listener.enterR1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR1" ):
                listener.exitR1(self)




    def r1(self):

        localctx = Day19Part2ExampleParser.R1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_r1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(Day19Part2ExampleParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R11Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r42(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R42Context,0)


        def r31(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R31Context,0)


        def r11(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R11Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r11

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR11" ):
                listener.enterR11(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR11" ):
                listener.exitR11(self)




    def r11(self):

        localctx = Day19Part2ExampleParser.R11Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_r11)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.r42()
                self.state = 89
                self.r31()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.r42()
                self.state = 92
                self.r11()
                self.state = 93
                self.r31()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r15(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R15Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR5" ):
                listener.enterR5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR5" ):
                listener.exitR5(self)




    def r5(self):

        localctx = Day19Part2ExampleParser.R5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_r5)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.r1()
                self.state = 98
                self.r14()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.r15()
                self.state = 101
                self.r1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R19Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r14(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Day19Part2ExampleParser.R14Context)
            else:
                return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,i)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r19

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR19" ):
                listener.enterR19(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR19" ):
                listener.exitR19(self)




    def r19(self):

        localctx = Day19Part2ExampleParser.R19Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_r19)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.r14()
                self.state = 106
                self.r1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.r14()
                self.state = 109
                self.r14()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R12Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r24(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R24Context,0)


        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r19(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R19Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r12

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR12" ):
                listener.enterR12(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR12" ):
                listener.exitR12(self)




    def r12(self):

        localctx = Day19Part2ExampleParser.R12Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_r12)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.r24()
                self.state = 114
                self.r14()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.r19()
                self.state = 117
                self.r1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R16Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r15(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R15Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r14(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Day19Part2ExampleParser.R14Context)
            else:
                return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,i)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r16

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR16" ):
                listener.enterR16(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR16" ):
                listener.exitR16(self)




    def r16(self):

        localctx = Day19Part2ExampleParser.R16Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_r16)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.r15()
                self.state = 122
                self.r1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.r14()
                self.state = 125
                self.r14()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R31Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r17(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R17Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r13(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R13Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r31

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR31" ):
                listener.enterR31(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR31" ):
                listener.exitR31(self)




    def r31(self):

        localctx = Day19Part2ExampleParser.R31Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_r31)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.r14()
                self.state = 130
                self.r17()
                pass
            elif token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.r1()
                self.state = 133
                self.r13()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R6Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r14(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Day19Part2ExampleParser.R14Context)
            else:
                return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,i)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r6

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR6" ):
                listener.enterR6(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR6" ):
                listener.exitR6(self)




    def r6(self):

        localctx = Day19Part2ExampleParser.R6Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_r6)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.r14()
                self.state = 138
                self.r14()
                pass
            elif token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.r1()
                self.state = 141
                self.r14()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r24(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R24Context,0)


        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r4(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R4Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR2" ):
                listener.enterR2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR2" ):
                listener.exitR2(self)




    def r2(self):

        localctx = Day19Part2ExampleParser.R2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_r2)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.r1()
                self.state = 146
                self.r24()
                pass
            elif token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.r14()
                self.state = 149
                self.r4()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r8(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R8Context,0)


        def r11(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R11Context,0)


        def EOF(self):
            return self.getToken(Day19Part2ExampleParser.EOF, 0)

        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR0" ):
                listener.enterR0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR0" ):
                listener.exitR0(self)




    def r0(self):

        localctx = Day19Part2ExampleParser.R0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_r0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.r8()
            self.state = 154
            self.r11()
            self.state = 155
            self.match(Day19Part2ExampleParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R13Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r3(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R3Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r12(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R12Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r13

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR13" ):
                listener.enterR13(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR13" ):
                listener.exitR13(self)




    def r13(self):

        localctx = Day19Part2ExampleParser.R13Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_r13)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.r14()
                self.state = 158
                self.r3()
                pass
            elif token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.r1()
                self.state = 161
                self.r12()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R15Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r15

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR15" ):
                listener.enterR15(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR15" ):
                listener.exitR15(self)




    def r15(self):

        localctx = Day19Part2ExampleParser.R15Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_r15)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.r1()
                pass
            elif token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.r14()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R17Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def r2(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R2Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r7(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R7Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r17

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR17" ):
                listener.enterR17(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR17" ):
                listener.exitR17(self)




    def r17(self):

        localctx = Day19Part2ExampleParser.R17Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_r17)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.r14()
                self.state = 170
                self.r2()
                pass
            elif token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.r1()
                self.state = 173
                self.r7()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R23Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r25(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R25Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r22(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R22Context,0)


        def r14(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r23

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR23" ):
                listener.enterR23(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR23" ):
                listener.exitR23(self)




    def r23(self):

        localctx = Day19Part2ExampleParser.R23Context(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_r23)
        try:
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Day19Part2ExampleParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.r25()
                self.state = 178
                self.r1()
                pass
            elif token in [Day19Part2ExampleParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.r22()
                self.state = 181
                self.r14()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R28Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r16(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R16Context,0)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r28

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR28" ):
                listener.enterR28(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR28" ):
                listener.exitR28(self)




    def r28(self):

        localctx = Day19Part2ExampleParser.R28Context(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_r28)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.r16()
            self.state = 186
            self.r1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Day19Part2ExampleParser.R1Context)
            else:
                return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,i)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR4" ):
                listener.enterR4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR4" ):
                listener.exitR4(self)




    def r4(self):

        localctx = Day19Part2ExampleParser.R4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_r4)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.r1()
            self.state = 189
            self.r1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R20Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r14(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Day19Part2ExampleParser.R14Context)
            else:
                return self.getTypedRuleContext(Day19Part2ExampleParser.R14Context,i)


        def r1(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R1Context,0)


        def r15(self):
            return self.getTypedRuleContext(Day19Part2ExampleParser.R15Context,0)


        def getRuleIndex(self):
            return Day19Part2ExampleParser.RULE_r20

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR20" ):
                listener.enterR20(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR20" ):
                listener.exitR20(self)




    def r20(self):
